--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "UNLICENCED",
   "dependencies": {
     "babel-core": "^6.17.0",
+    "babel-cli": "^6.6.5",
     "babel-loader": "^6.2.5",
     "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.16.0",
